--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,7 +7,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Bathroom Condition</h1>  
+  <h1>Bathroom Condition</h1>
+  <div class="select-container">
+    <label for="select-container">Choose Device</label>
+    <select name="device" id="selectDevice">
+      <option value="1" id="kintamani">Kintamani</option>
+      <option value="2" id="kuta">Kuta</option>
+      <option value="3" id="lembongan">Lembongan</option>
+    </select>
+  </div>
   <div id="lampControl">
     <p>Time</p>
     <p id="currentTime"></p>
