docs(villa name): updating villa name

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,9 +11,8 @@
   <div class="select-container">
     <label for="select-container">Choose Device</label>
     <select name="device" id="selectDevice">
-      <option value="1" id="kintamani">Kintamani</option>
-      <option value="2" id="kuta">Kuta</option>
-      <option value="3" id="lembongan">Lembongan</option>
+      <option value="1" id="zettahouse">Zettahouse</option>
+      <option value="2" id="stellamaris">Stella Maris</option>
     </select>
   </div>
   <div id="lampControl">
